--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Jitesh Singh - Portfolio</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
         header { text-align: center; padding: 50px; background-color: #282c34; color: white; }
@@ -11,19 +11,54 @@
         h1, h2 { color: #333; }
         ul { list-style: none; padding: 0; }
         li { padding: 10px 0; }
+        .project {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+        .project img {
+            width: 150px;
+            height: 150px;
+            margin-right: 20px;
+        }
+        .project-description {
+            max-width: 600px;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
-        <p>Front-end, Back-end, Full-stack Developer</p>
+        <h1>Jitesh Singh</h1>
+        <p>Aspiring Software Developer with Knowledge in Python and C++</p>
     </header>
+
+    <section>
+        <h2>About Me</h2>
+        <p>As a passionate software developer, I thrive on turning innovative ideas into tangible solutions through coding. My problem-solving skills and creativity allow me to approach challenges with a unique perspective. I'm also a strong team player, collaborating effectively with others to deliver high-quality projects.</p>
+        <p>Proficient in Python, Java, with a strong foundation in algorithm design and data structures. Familiar with C++ and web development frameworks. Continuously upskilling myself to be a versatile and adaptable software developer.</p>
+    </section>
+
     <section>
         <h2>Projects</h2>
-        <ul>
-            <li><a href="https://github.com/yourusername/project1">Project 1</a> - Brief description</li>
-            <li><a href="https://github.com/yourusername/project2">Project 2</a> - Brief description</li>
-        </ul>
+        <div class="project">
+            <img src="placeholder.png" alt="Project Image">
+            <div class="project-description">
+                <h3>Snake and Ladder Game</h3>
+                <p>A Python-based interactive game designed using fundamental OOP concepts. The game offers a user-friendly interface to roll the dice and navigate the board as per traditional snake and ladder rules.</p>
+            </div>
+        </div>
+
+        <div class="project">
+            <img src="placeholder.png" alt="Project Image">
+            <div class="project-description">
+                <h3>Matrix Visualizer</h3>
+                <p>An interactive matrix visualizer developed using Python to demonstrate various matrix operations like transformations, rotations, and visualizing linear equations graphically.</p>
+            </div>
+        </div>
+
+        <!-- Add more projects in a similar manner -->
     </section>
 </body>
 </html>
+
