--- a/index.html
+++ b/index.html
@@ -5,32 +5,121 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jitesh Singh - Portfolio</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
-        header { text-align: center; padding: 50px; background-color: #282c34; color: white; }
-        section { padding: 20px; }
-        h1, h2 { color: #333; }
-        ul { list-style: none; padding: 0; }
-        li { padding: 10px 0; }
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+
+        header {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 50px;
+            background-color: #282c34;
+            color: white;
+            position: relative;
+        }
+
+        header img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin-right: 20px;
+        }
+
+        header h1 {
+            font-size: 48px;
+            color: #61dafb;
+        }
+
+        .contact-info {
+            position: absolute;
+            right: 20px;
+            top: 20px;
+        }
+
+        .contact-info a {
+            margin-left: 10px;
+            text-decoration: none;
+            color: white;
+        }
+
+        .contact-info a:hover {
+            color: #61dafb;
+        }
+
+        section {
+            padding: 20px;
+        }
+
+        h2 {
+            color: #444;
+            margin-bottom: 20px;
+        }
+
         .project {
             display: flex;
             flex-direction: row;
             align-items: center;
-            margin-bottom: 20px;
+            margin-bottom: 40px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
         }
+
         .project img {
-            width: 150px;
-            height: 150px;
+            width: 300px;
+            height: 300px;
             margin-right: 20px;
+            object-fit: cover;
+            border-radius: 8px;
         }
+
         .project-description {
             max-width: 600px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #282c34;
+            color: white;
+        }
+
+        footer a {
+            margin-left: 10px;
+            text-decoration: none;
+            color: white;
+        }
+
+        footer a:hover {
+            color: #61dafb;
+        }
+
+        /* Cool effect on hover for buttons */
+        a {
+            transition: color 0.3s;
         }
     </style>
 </head>
 <body>
+
     <header>
+        <img src="profile-placeholder.jpg" alt="Jitesh Singh">
         <h1>Jitesh Singh</h1>
-        <p>Aspiring Software Developer with Knowledge in Python and C++</p>
+
+        <div class="contact-info">
+            <a href="mailto:jitesh@example.com">
+                <img src="email-icon.png" alt="Email" width="30">
+            </a>
+            <a href="https://linkedin.com/in/jitesh-singh">
+                <img src="linkedin-icon.png" alt="LinkedIn" width="30">
+            </a>
+        </div>
     </header>
 
     <section>
@@ -57,8 +146,14 @@
             </div>
         </div>
 
-        <!-- Add more projects in a similar manner -->
+        <!-- Add more projects similarly -->
     </section>
+
+    <footer>
+        <p>Connect with me:</p>
+        <a href="mailto:jitesh@example.com">Email</a> | 
+        <a href="https://linkedin.com/in/jitesh-singh">LinkedIn</a>
+    </footer>
+
 </body>
 </html>
-
