--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <section>
         <h2>Projects</h2>
         <div class="project">
-            <img src="https://github.com/CodrJitesh/CodrJitesh.github.io/blob/main/Screenshot%202024-07-29%20002255.png" alt="Project Image">
+            <img src="Screenshot%202024-07-29%20002255.png" alt="Project Image">
             <div class="project-description">
                 <h3>Snake and Ladder Game</h3>
                 <p>A Python-based interactive game designed using fundamental OOP concepts. The game offers a user-friendly interface to roll the dice and navigate the board as per traditional snake and ladder rules.</p>
@@ -139,7 +139,7 @@
         </div>
 
         <div class="project">
-            <img src="placeholder.png" alt="Project Image">
+            <img src="Screenshot 2024-04-12 235240.png" alt="Project Image">
             <div class="project-description">
                 <h3>Matrix Visualizer</h3>
                 <p>An interactive matrix visualizer developed using Python to demonstrate various matrix operations like transformations, rotations, and visualizing linear equations graphically.</p>
