--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
 <body>
 
     <header>
-        <img src="profile-placeholder.jpg" alt="Jitesh Singh">
+        <img src="WhatsApp Image 2024-02-21 at 21.49.55_75d113b6" alt="Jitesh Singh">
         <h1>Jitesh Singh</h1>
 
         <div class="contact-info">
-            <a href="mailto:jitesh@example.com">
+            <a href="mailto:jiteshsingh4305@gmail.com">
                 <img src="email-icon.png" alt="Email" width="30">
             </a>
-            <a href="https://linkedin.com/in/jitesh-singh">
+            <a href="https://www.linkedin.com/in/jitesh-singh-920413285/">
                 <img src="linkedin-icon.png" alt="LinkedIn" width="30">
             </a>
         </div>
