--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <body>
 
     <header>
-        <img src="WhatsApp Image 2024-02-21 at 21.49.55_75d113b6" alt="Jitesh Singh">
+        <img src="WhatsApp Image 2024-02-21 at 21.49.55_75d113b6" >
         <h1>Jitesh Singh</h1>
 
         <div class="contact-info">
